Fix hero image size and align content

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,7 +5,7 @@
   height: 80px;
   justify-content: space-between;
   position: relative;
-  padding: 0 20px;
+  padding: 0 100px;
 
   /* :global .dark-theme :local & {
     background: var(--dark-background);
@@ -20,10 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 auto;
-  width: 1180px;
-  /* width: 760px; */
-  max-width: 100%;
+  width: 100%;
 }
 
 .logo {
