--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -1,25 +1,42 @@
 .hero {
   display: flex;
   height: calc(100vh - 80px); /* Viewport height - header height */
+  justify-content: space-between;
   position: relative;
   width: 100vw;
 }
 
 .left {
   height: 100%;
-  width: 50%;
+  padding: 50px 0 50px 100px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.left h1 {
+  display: inline-block;
+  font-size: 4.5vw;
+  letter-spacing: 1px;
+  text-align: left;
+}
+
+.left h1 span {
+  color: var(--yellow);
 }
 
 .right {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
   background-color: var(--dark-background);
   height: 100%;
-  position: relative;
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  right: 0;
+  width: 60%;
 }
 
-.image {
-  position: absolute;
-  right: 0;
+.right img {
   bottom: 0;
+  position: absolute;
+  height: 100%;
+  object-fit: cover;
 }
